2021-07-27 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/z80/abs.s,
	  device/lib/z80/divsigned.s,
	  device/lib/z80/divunsigned.s,
	  device/lib/z80/modsigned.s,
	  device/lib/z80/modunsigned.s,
	  doc/sdccman.lyx,
	  src/z80/gen.c
	  device/lib/z80/strcpy.s,
	  device/lib/z80/strlen.s,
	  device/lib/z80/atomic_flag_test_and_set.s,
	  device/lib/z80/mul.s,
	  device/lib/z80/mulchar.s:
	  New calling convention for z80.

2021/07/27 Visenri

    * src/pdk/gen.c
      support/regression/tests/getbyte_param.c
      Fix bug #3269.
      Add test for it.

2021/07/26 Visenri

    * support/regression/Makefile.in
      support/regression/ports/pdk13
      support/regression/ports/pdk13/spec.mk
      support/regression/ports/pdk13/support.c
      support/regression/ports/pdk13/uCsim.cmd
      Added infrastructure to test pdk13.
      It is in the filter-out list to avoid automatic test, because many tests still need some work to be passed/skipped [#394].

2021/07/26 Visenri

    * support/regression/fwk/include/testfwk.h
      support/regression/fwk/lib/testfwk.c
      Lightweight version of test framework (testfwk) [#393].
      Added new macro to indicate we are targeting a very low memory device: TARGET_VERY_LOW_MEMORY.
      Added macros to easy the check of all pdk variants with 1 or 2 checks [#394].
      Different implementation of __printd with hex output (for TARGET_VERY_LOW_MEMORY).
      Skipped some strings in "Summary" output to save memory (for TARGET_VERY_LOW_MEMORY).

2021/07/26 Visenri

    * support/regression/collate-results.py
      support/regression/compact-results.py
      Added processing for the stack overflow message from simulator.
      Added new check to reset state machine and name with "Simulation started" string
      Added checks to validate the name after "--- Running", because sometimes we get garbage, because of caotic program behavior (due to stack overflow or wrong code).