@@ -11,7 +11,8 @@
 	  device/lib/z80/strlen.s,
 	  device/lib/z80/atomic_flag_test_and_set.s,
 	  device/lib/z80/mul.s,
-	  device/lib/z80/mulchar.s:
+	  device/lib/z80/mulchar.s,
+	  device/lib/z80/memmove.s:
 	  New calling convention for z80.
 
 2021/07/27 Visenri
